--- a/css/metodo_de_pagamento.css
+++ b/css/metodo_de_pagamento.css
@@ -39,6 +39,7 @@
 
 #progress-bar {
     padding: 47px;
+    pointer-events: none;
 }
 
 #progress-bar img {
@@ -66,7 +67,7 @@
 #main-panel h3 {
     font-weight: 700;
 
-    /* identical to box height */
+    font-size: 1.5rem;
     text-transform: uppercase;
 
     color: #1B394E;
@@ -294,4 +295,57 @@ select::-ms-expand {
 
 .borda-superior {
     text-align: center;
+}
+
+/* Compra realizado */
+#main-panel h2 {
+    text-align: center;
+    color: #FFF;
+    text-transform: uppercase;
+    font-family: var(--font-destaque);
+    font-weight: 400;
+    margin-bottom: 36px;
+    padding: 20px 0;
+    background-color: #4FC01A;
+    border-radius: 5px;
+}
+
+.info {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+#info-compra {
+    display: inline-block;
+    width: 50%;
+}
+
+#info-compra p {
+    margin: 10px 0;
+    font-family: var(--font-destaque);
+    font-size: 1.1rem;
+    font-weight: 400;
+    color: var(--cor-texto-destaque);
+}
+
+.info-geral {
+    background-color: #FFF;
+    border: 1px solid var(--cor-borda);
+    margin-top: 10px;
+    padding: 15px;
+    border-radius: 7px;
+}
+
+.info-geral h4 {
+    margin-top: 0 !important;
+}
+
+.info-geral h5 {
+    padding: 5px !important;
+
+}
+
+.sucesso {
+    background-color: rgb(79, 192, 26, 0.075);
 }
